@@ -1,11 +1,23 @@
 """Admin classes for the dynamic_content app."""
-# from django.contrib import admin
+from django.contrib import admin
+from django.utils.translation import ugettext_lazy as _
 
-# from . import models
+from hvad.admin import TranslatableAdmin
+
+from . import models
 
 
-# class YourModelAdmin(admin.ModelAdmin):
-#    list_display = ['some', 'fields', ]
-#    search_fields = ['some', 'fieds', ]
+class DynamicContentAdmin(TranslatableAdmin):
+    list_display = ['identifier', 'get_content', 'all_translations']
+    search_fields = ['identifier', 'translations__content', ]
 
-# admin.site.register(models.YourModel, YourModelAdmin)
+    def get_content(self, obj):
+        return obj.content
+    get_content.short_description = _('Content')
+
+    def get_queryset(self, request):
+        qs = super(DynamicContentAdmin, self).queryset(request)
+        qs = qs.prefetch_related('translations')
+        return qs
+
+admin.site.register(models.DynamicContent, DynamicContentAdmin)
